--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,3 +7,5 @@
   &lt;-- generated icon font
 </p>
 <p>Made with ♥ at <a href="http://viget.com">Viget</a></p>
+<div>Hi there!</div>
+<div id ="react"></>
